fix(convention): 修 6 文件 FQN → import 短名(CLAUDE.md §Java #1)
3-day 扫描发现的 FQN 散落违约,批量补 import:

- batch-common/event/DomainEvent.java:42-43
  java.util.Map.of / java.util.Collections.unmodifiableMap → Map.of / Collections.unmodifiableMap
- batch-common/utils/JsonUtils.java:85-89
  java.util.Map / java.util.LinkedHashMap 3 处 → import 短名
- batch-common/utils/IdGenerator.java:73
  java.time.ZoneOffset.UTC → ZoneOffset.UTC
- batch-console-api/web/ConsoleApprovalController.java:127
  org.springframework.security.core.Authentication → import
- batch-console-api/test/.../DefaultConsoleTenantConfigInitApplicationServiceTest.java:90-101
  6 处 org.springframework.transaction.* → import 4 个短名(PlatformTransactionManager /
  TransactionStatus / TransactionDefinition / SimpleTransactionStatus)
- batch-e2e-tests/.../E2eConsoleImportApplication.java:38-44
  6 处 org.springframework.ai.model.openai.autoconfigure.* → import 6 个短名

未修日志拼接误报:DefaultCompensationService:537 是 JobExecutionLogEntity
.setMessage(String) 持久化字段赋值,不是 log.info/warn/error 语句,无违约。

零行为变化,纯 import 改写。

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>